--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -17,4 +17,4 @@ jobs:
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: git status
       - name: Build centrifuge-chain
-        run: nix build -L
+        run: nix build -L && git status
