ci: work around buggy dirty tree detection
Source: https://github.com/NixOS/nix/issues/5302#ref-pullrequest-1009748465

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -20,4 +20,4 @@ jobs:
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: git status
       - name: Build centrifuge-chain
-        run: nix build --no-allow-dirty -L && git status
+        run: nix build --no-allow-dirty -L .\?rev=$(git rev-parse HEAD) && git status
